# frankfurt-air-quality-predictor

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
frankfurt_air_quality_predictor/: __init__.py  config.py  dataset.py  features.py  plots.py
frankfurt_air_quality_predictor/modeling/: predict.py  train.py
frankfurt_air_quality_predictor/reports/: demo_report.md  full_pipeline_report.md
models/: xgboost_pm25_forecast.pkl  xgboost_pm25_regressor.pkl  xgboost_violation_classifier.pkl
reports/: report.py
