[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "frankfurt_air_quality_predictor"
version = "0.0.1"
description = "Frankfurt PM2.5 forecasting with WHO compliance using OpenAQ API"
authors = [
  { name = "Dessalegn Mequanint Yehuala" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["frankfurt_air_quality_predictor"]
include = ["pyproject.toml", "frankfurt_air_quality_predictor/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["frankfurt_air_quality_predictor"]
force-sort-within-sections = true

